# fcg-final

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md
data/condiments/: ketchup.mtl  mustard.mtl
data/floor/: Floor.mtl
data/fridge/: Fridge.mtl
data/hamburgeres/: hamburgeres.mtl
data/hamburgueres/: hamburgeres.mtl
data/ingredients/: bacon.mtl  bottom_bun.mtl  cheese.mtl  egg_fried.mtl  ketchup-splash.mtl  lettuce.mtl  mustard-splash.mtl  patty.mtl  patty_raw.mtl  tomato.mtl  top_bun.mtl
data/kitchenware/: lavandino.mtl  plate.mtl
data/oven/: fkc.mtl
data/screen/: blt.mtl  cheeseburger.mtl  meatlover.mtl  salad.mtl  special.mtl
data/table/: table.mtl
data/ufo/: ufo.mtl
data/wall/: wall.mtl
glad/: CMakeLists.txt  glad.c  glad.h
glfw/: glfw3.h
shader/: goraud_vertex.glsl  gouraud_vertex.glsl  phong_fragment.glsl  phong_vertex.glsl
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  CubicBezier.cpp  CubicBezier.hpp  Entity.cpp  Entity.hpp  GPUProgram.cpp  GPUProgram.hpp  HeldObject.cpp  HeldObject.hpp  IngredientManager.cpp  IngredientManager.hpp  Input.cpp  Input.hpp  Model.cpp  Model.hpp  Obj.cpp  Obj.hpp  ObjModel.cpp  ObjModel.hpp  OpenGL.h  Player.cpp  Player.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  SceneObject.hpp  Shader.cpp  Shader.hpp  Singleton.hpp  Window.cpp  Window.hpp  main.cpp  matrices.cpp  matrices.hpp  shader_fragment.glsl  utils.hpp
src/collision/: HitBox.cpp  HitBox.hpp  HitSphere.cpp  HitSphere.hpp
src/coords/: Spheric.hpp
src/entity/: Burger.cpp  Burger.hpp  Burguer.cpp  Burguer.hpp  Egg.cpp  Egg.hpp  FlyingKetchup.cpp  FlyingKetchup.hpp  KetchupBottle.cpp  KetchupBottle.hpp  MustardBottle.cpp  MustardBottle.hpp  Screen.cpp  Screen.hpp  Table.cpp  Table.hpp  UFO.cpp  UFO.hpp
src/input/: Action.hpp  Keys.hpp  Mouse.cpp  Mouse.hpp
src/model/: Cube.cpp  Cube.hpp  Floor.cpp  (+17 more)
stb/: CMakeLists.txt
(+52 files in other folders)
